# stretch2

./: .gitignore  CMakeLists.txt  README.md  REFERENCE.md  dune-project
include/: token.hpp  tokenizer.hpp
lib/: ast.ml  dune  evaluator.ml  lexer.mll  parser.mly  stretch2.ml
src/: tokenizer.cpp
tests/: arithmetic.t  dune  identifiers.t  test_tokenizer.cpp
